v1.0/_sources/examples/plots/Combined_plotting.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/plots/Combined_plotting.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_plots_Combined_plotting.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_plots_Combined_plotting.py:


Combined Plotting
=================

Demonstrate the use of MetPy's simplified plotting interface combining multiple plots.

Also shows how to control the maps that are plotted. Plots sample NARR data.

.. GENERATED FROM PYTHON SOURCE LINES 12-22

.. code-block:: default


    import xarray as xr

    from metpy.cbook import get_test_data
    from metpy.plots import ContourPlot, ImagePlot, MapPanel, PanelContainer
    from metpy.units import units

    # Use sample NARR data for plotting
    narr = xr.open_dataset(get_test_data('narr_example.nc', as_file_obj=False))








.. GENERATED FROM PYTHON SOURCE LINES 23-24

Create a contour plot of temperature

.. GENERATED FROM PYTHON SOURCE LINES 24-31

.. code-block:: default

    contour = ContourPlot()
    contour.data = narr
    contour.field = 'Temperature'
    contour.level = 850 * units.hPa
    contour.linecolor = 'red'
    contour.contours = 15








.. GENERATED FROM PYTHON SOURCE LINES 32-33

Create an image plot of Geopotential height

.. GENERATED FROM PYTHON SOURCE LINES 33-39

.. code-block:: default

    img = ImagePlot()
    img.data = narr
    img.field = 'Geopotential_height'
    img.level = 850 * units.hPa









.. GENERATED FROM PYTHON SOURCE LINES 40-41

Plot the data on a map

.. GENERATED FROM PYTHON SOURCE LINES 41-51

.. code-block:: default

    panel = MapPanel()
    panel.area = 'us'
    panel.layers = ['coastline', 'borders', 'states', 'rivers', 'ocean', 'land']
    panel.title = 'NARR Example'
    panel.plots = [contour, img]

    pc = PanelContainer()
    pc.size = (10, 8)
    pc.panels = [panel]
    pc.show()



.. image:: /examples/plots/images/sphx_glr_Combined_plotting_001.png
    :alt: NARR Example
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.198 seconds)


.. _sphx_glr_download_examples_plots_Combined_plotting.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: Combined_plotting.py <Combined_plotting.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: Combined_plotting.ipynb <Combined_plotting.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
